# codewars

./: .gitignore  CMakeLists.txt
arrays/8kyu/: a_needle_in_the_haystack.cpp  a_wolf_in_sheep's_clothing.cpp  array_plus_array.cpp  beginner_lost_without_a_map.cpp  beginner_reduce_but_grow.cpp  calculate_average.cpp  convert_a_string_to_an_array.cpp  convert_number_to_reversed_array_of_digits.cpp  count_by_x.cpp  count_of_positive_sum_of_negatives.cpp  count_the_monkeys!.cpp  counting_sheep.cpp  fake_binary.cpp  find_numbers_which_are_divisible_by_given_number.cpp  get_the_mean_of_an_array.cpp  i_love_you_a_little_a_lot_passionately_not_at_all.cpp  invert_values.cpp  my_head_is_at_the_wrong_end.cpp  square_n_sum.cpp  sum_arrays.cpp  sum_of_differences_in_array.cpp  sum_of_positive.cpp  swap_values.cpp  to_square_root_or_not_to_square_root.cpp
strings/8kyu/: abbreviate_a_two_word_name.cpp  convert_a_boolean_to_a_string.cpp  convert_a_number_to_a_string.cpp  convert_a_string_to_a_number.cpp  double_char.cpp  grasshopper_personalized_message.cpp  if_you_can't_sleep_just_count_sheep.cpp  is_the_string_uppercase.cpp  make_uppercase.cpp  remove_exclamation_marks.cpp  remove_first_and_last_character.cpp  remove_string_spaces.cpp  returning_strings.cpp  reversed_strings.cpp  reversed_words.cpp  sentence_smash.cpp  sort_and_star.cpp  string_repeat.cpp  total_amount_of_points.cpp  you_only_need_one_beginner.cpp
