cmake_minimum_required(VERSION 3.26)
project(codewars)

set(CMAKE_CXX_STANDARD 17)
add_executable(codewars
#        arrays/8kyu/to_square_root_or_not_to_square_root.cpp
        arrays/8kyu/array_plus_array.cpp
        #        arrays/8kyu/beginner_reduce_but_grow.cpp
#        arrays/8kyu/calculate_average.cpp
#        arrays/8kyu/sum_arrays.cpp
#        arrays/8kyu/convert_a_string_to_an_array.cpp
)
